# file-station

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md
deploy/: file-station.service
migrations/: 20220208124022_init.sql
src/: config.rs  dist.rs  main.rs  user.rs
src/file/: file.rs  folder.rs  mod.rs  share.rs
