[package]
name = "file-station"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.1", features = ["headers", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.2.2", features = ["cors", "compression-full", "trace", "fs"] }
serde = "1.0.136"
serde_json = "1.0.78"
jsonwebtoken = "8.0.1"
lazy_static = "1.4.0"
thiserror = "1.0"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls" , "sqlite" ] }
rust-embed = "6.3.0"
mime_guess = "2.0.3"
rand = "0.8.4"
argon2 = "0.3.3"
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
percent-encoding = "2.1.0"
