[package]
name = "file-station"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.17", features = ["headers", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.3.4", features = ["cors", "compression-full", "trace", "fs"] }
serde = "1.0.147"
serde_json = "1.0.87"
jsonwebtoken = "8.1.1"
lazy_static = "1.4.0"
thiserror = "1.0"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls" , "sqlite" ] }
rust-embed = "6.4.2"
mime_guess = "2.0.4"
rand = "0.8.5"
argon2 = "0.4.1"
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
percent-encoding = "2.1.0"
